--- a/Resources/Private/Partials/Configuration/Properties.html
+++ b/Resources/Private/Partials/Configuration/Properties.html
@@ -1,8 +1,8 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<table class="tx-typo3-7timer-extension" >
+<table class="tx-7timer-extension" >
 	<tr>
 		<td>
-			<f:translate key="tx_typo37timerextension_domain_model_configuration.label" />
+			<f:translate key="tx_7timerextension_domain_model_configuration.label" />
 		</td>
 		<td>
 		{configuration.label}
@@ -10,7 +10,7 @@
 	</tr>
 	<tr>
 		<td>
-			<f:translate key="tx_typo37timerextension_domain_model_configuration.lon" />
+			<f:translate key="tx_7timerextension_domain_model_configuration.lon" />
 		</td>
 		<td>
 		{configuration.lon}
@@ -18,7 +18,7 @@
 	</tr>
 	<tr>
 		<td>
-			<f:translate key="tx_typo37timerextension_domain_model_configuration.lat" />
+			<f:translate key="tx_7timerextension_domain_model_configuration.lat" />
 		</td>
 		<td>
 		{configuration.lat}
@@ -26,7 +26,7 @@
 	</tr>
 	<tr>
 		<td>
-			<f:translate key="tx_typo37timerextension_domain_model_configuration.type" />
+			<f:translate key="tx_7timerextension_domain_model_configuration.type" />
 		</td>
 		<td>
 		{configuration.type}
