--- a/Resources/Private/Templates/Timer/List.html
+++ b/Resources/Private/Templates/Timer/List.html
@@ -14,15 +14,15 @@
                 Please wait 7Timer! is currently loading...
             </div>
         </div>
-        <div id="ext7timer_content" class="ext7timer_hide">
+        <div id="ext7timer_error" class="ext7timer_hide">
             <div class="ext7timer_text">
                 An Error Occured!
             </div>
-            <button class="ext7timer_button" id="ext7timer_reconnect" @click="reconnect()">
-                Reconnect
+            <button id="ext7timer_reconnect" onclick="reconnect()">
+                Refresh
             </button>
         </div>
-        <div id="ext7timer_error" class="ext7timer_hide">
+        <div id="ext7timer_content" class="ext7timer_hide">
 
         </div>
     </div>
@@ -52,7 +52,7 @@
         }
     </script>
     <script>
-        const url = 'http://www.7timer.info/bin/api.pl?lon=<f:format.raw>{configuration.lon}</f:format.raw>&lat=<f:format.raw>{configuration.lat}</f:format.raw>&product=astro&output=json'
+        const url = 'http://www.7timer.info/bin/api.pl?lon=<f:format.raw>{configuration.lon}</f:format.raw>&lat=<f:format.raw>{configuration.lat}</f:format.raw>&product=civil&output=json'
         const preloaderParent = document.getElementById('ext7timer_preloader')
         const errorParent = document.getElementById('ext7timer_error')
         const successParent = document.getElementById('ext7timer_content')
@@ -60,6 +60,8 @@
         function reconnect() {
             successParent.classList.add('ext7timer_hide')
             errorParent.classList.add('ext7timer_hide')
+            preloaderParent.classList.remove('ext7timer_hide')
+            retrieveData()
         }
 
         function parseWeatherData(data) {
