--- a/Resources/Public/CSS/7timer_plugin.css
+++ b/Resources/Public/CSS/7timer_plugin.css
@@ -174,3 +174,68 @@
     background: rgba(0, 0, 0, 0.45);
     border: 0px!important;
 }
+#ext7timer_day_content {
+    padding-bottom: 40px;
+    padding-top: 10px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+.ext7timer_weather_state {
+    display: flex;
+    position: relative;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ext7timer_weather_label {
+    margin-left: 2px;
+    margin-right: 2px;
+    background: #82828226;
+    color: #000000;
+    border: 0;
+    border-radius: 100px;
+    padding: 0px 12px;
+    font-size: 13px;
+}
+
+.ext7timer_night_background .ext7timer_weather_label {
+    color: #ffffff;
+    background: rgba(98, 98, 98, 0.27);
+}
+.ext7timer_weather_image {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    border-radius: 50%;
+    background-color: #82828226;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-in-out;
+}
+
+.ext7timer_night_background .ext7timer_weather_image {
+    background-color: rgba(98, 98, 98, 0.27);
+}
+#ext7timer_city_label {
+    position: absolute;
+    left: 6px;
+    bottom: 6px;
+    margin-left: 2px;
+    margin-right: 2px;
+    transition-duration: 0.35s;
+    transition-timing-function: ease-in-out;
+    background: #82828226;
+    color: #000000;
+    border: 0;
+    border-radius: 100px;
+    padding: 0px 12px;
+}
+.ext7timer_night_background #ext7timer_city_label {
+    background-color: rgba(98, 98, 98, 0.27);
+    color: #fff;
+}
